--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
      <input type="submit" class="submit-btn"  id="js-submit" value="送信する" >
     <!-- /.contact-btn -->
 
-    <p class="end-message">お問い合わせありがとうございました!</p>
+    <p class="end-message"> <span> お問い合わせ</span><span>ありがとうございました!</span> </p>
     <p class="false-message">送信失敗です.</p>
 
  </form><!-- /.contact-form -->
